src/test/resources/test_data/error/threeArgBind.smtx
main module threeArgBind {
    @decl(x, int);
    @bind(x, 4, 5);
}